CHANGES.TXT


Tracking changes made to project...


11-6-13:
	Attempted to use an include in test.s. A simple function to move 
	the value 4 to EAX. Currently does not work. 