@@ -1,11 +1,0 @@
-
-
-.text
-
-.set WRITESTRING, 4
-
-.func INTERRUPT
-
-	int	$0x80
-
-.endfunc
